css/crep.css
body
{
	background: #c6c6c6 url('../img/mainBgPattern.png')
}

.navbar-lower
{
	margin-top: 50px;
	width: 100%;
}

.panel-default
{
	border-color: #89B3D1;
}

.panel
{
	background-color: #749BD1;
}

.panel-default > .panel-heading
{
	background-color: #89B3D1;
	border-color: #89B3D1;
}

.panel-footer
{
	background-color: #89B3D1;
	border-color: #89B3D1;
}

.navbar-default .navbar-brand
{
	color: #FFF;
	font-family: brandFont;
	font-size: 30;
}

.navbar-default .navbar-nav > li > a
{
	color: #CCC;
	font-family: linkFont;
}

.navbar-default
{
	background-color: #749BD1;
	border-color: #5276A8;
}

@font-face
{
    font-family: brandFont;
    src: url(../fonts/robotech-gp.ttf);
}

@font-face
{
    font-family: linkFont;
    src: url(../fonts/robotaur.ttf);
}

.carousel-inner > .item > img, .carousel-inner > .item > a > img
{
	max-height: 600px;
}

.jumbotron
{
	padding: 30px;
}

#map-canvas
{
	width: 100%;
	height: 400px;
}

#map-canvas > img
{
	height: 400px;
}

#footer
{
	margin-bottom: 30px;
}

#footer img
{
	max-height: 100px;
	max-width: 100%;
}

